assets/style.css
/* Palette */

:root {
    --bg: #022b36;
    --bg-text: #596e75;
    --link: #2e8dd0;
    --link-active: #2e8dd0;
}

/* Resets */

a, a:active, a:focus, a:hover, a:visited { text-decoration: none; }

form, html, body, div, h1, h2, h3, h4, h5, h6, a, p, li, button {
    margin: 0;
    padding: 0;
}

/* Font selectors */

button, input, label, p {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    color: inherit;
    font-family: 'Roboto Mono', monospace;
    line-height: 1em;
    font-size: 1em;
    font-weight: 400;
}

/* Element selectors */

a { color: var(--link); }

a:hover {
    color: var(--link-active);
    text-decoration: underline;
}

body {
    background-color: var(--bg);
    color: var(--bg-text);
}

/* Class selectors */

.background {
    position: fixed;
    z-index: 0;
}

.card {
    animation: bounce 1s;
    background-color: var(--bg);
    border: 2px solid var(--bg-text);
    border-radius: 4px;
    bottom: 0;
    left: 50%;
    margin-bottom: 32px;
    padding: 16px;
    position: fixed;
    text-align: left;
    transform: translateX(-50%);
    z-index: 1;
}

.center {
    align-items: center;
    display: flex;
    justify-content: center;
}

.fill {
    height: 100%;
    width: 100%;
}

.icon {
    cursor: pointer;
    fill: var(--link);
    height: 3em;
    max-width: 3.2em;
    user-select: none;
}

.icon:hover { fill: var(--link-active); }

.row {
    align-items: center;
    display: flex;
    flex-direction: row;
    gap: 16px;
}

.text-center { text-align: center; }

/* Keyframes */

@keyframes bounce {
    0% { transform: translate(-50%, 200px); }
    25% { transform: translate(-50%, -30px); }
    50% { transform: translate(-50%, 10px); }
    75% { transform: translate(-50%, -4px); }
    100% { transform: translate(-50%, 0); }
}

